# NFS-ModscriptViewer

./: .gitignore  CHANGELOG.md  README.md
NFS-ModscriptViewer/: CMakeLists.txt
NFS-ModscriptViewer/resources/: resources.qrc
NFS-ModscriptViewer/scripts/: build_version.py  delete-build.bat  deploy-windows-x64.bat  run_build_version.bat
NFS-ModscriptViewer/setup/: SetupCode-windows-x64.iss  version.iss.inc
NFS-ModscriptViewer/src/: AboutDialog.cpp  AboutDialog.hpp  Aliases.hpp  ColorFormats.hpp  Highlighter.cpp  Highlighter.hpp  MainWindow.cpp  MainWindow.hpp  SupportDialog.cpp  SupportDialog.hpp  Utils.cpp  Utils.hpp  main.cpp  version.hpp
NFS-ModscriptViewer/ui/: AboutDialog.ui  MainWindow.ui  SupportDialog.ui
